[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroInfoPanel_Related/HeroInfoPanel.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_BodyBackground.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_White/Hero/HeroInfoPanel_Related/Assets/HeroButtonImage.png" type="Texture" id=5]

[node name="HeroInfoPanel" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 2 )

[node name="VBoxContainer" parent="." index="0"]
margin_bottom = 93.0
size_flags_horizontal = 6

[node name="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer" index="1"]
margin_left = 17.0
margin_right = 33.0

[node name="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer" index="0"]
margin_right = 16.0
text = "Hero"

[node name="BodyMarginer" parent="VBoxContainer" index="2"]
margin_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 110.0
margin_bottom = 78.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer" index="1"]
margin_right = 110.0
margin_bottom = 78.0
mouse_filter = 2
custom_constants/margin_top = 3
custom_constants/margin_bottom = 3

[node name="ShowHeroGUI" parent="VBoxContainer/BodyMarginer/MarginContainer" index="0" instance=ExtResource( 3 )]
margin_left = 19.0
margin_top = 3.0
margin_right = 91.0
margin_bottom = 75.0
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )

[node name="BottomBorder" parent="VBoxContainer" index="3"]
margin_top = 92.0
margin_bottom = 93.0
[connection signal="pressed_mouse_event" from="VBoxContainer/BodyMarginer/MarginContainer/ShowHeroGUI" to="." method="_on_ShowHeroGUI_pressed_mouse_event"]
